//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk, unique]
  email String [unique, not null]
  password String [not null]
  name String
  role Role [not null, default: 'STUDENT']
  group_membership Group_membership [not null]
  result Result [not null]
  response Response [not null]
}

Table Group {
  id String [pk, unique]
  name String [not null]
  group_membership Group_membership [not null]
  quiz Quiz [not null]
}

Table Group_membership {
  creator Boolean [not null, default: false]
  user User [not null]
  userId String [not null]
  group Group [not null]
  groupId String [not null]

  indexes {
    (userId, groupId) [pk]
  }
}

Table Quiz {
  id String [pk, unique]
  name String [not null]
  full_marks Int [not null]
  pass_marks Int [not null]
  category_name Category_name [not null, default: 'ACHIEVEMENT']
  questions Question [not null]
  answers Answer [not null]
  result Result [not null]
  response Response [not null]
  group Group [not null]
  groupId String [not null]
}

Table Question {
  id String [pk, unique]
  question_text String [not null]
  quiz Quiz [not null]
  quizId String [not null]
  options Option [not null]
  answer Answer
}

Table Option {
  id String [pk, unique]
  option String [not null]
  txt String [not null]
  mark Int [not null]
  question Question [not null]
  questionId String [not null]
}

Table Answer {
  id String [pk, unique]
  answer_text String [not null]
  question Question [not null]
  questionId String [unique, not null]
  quiz Quiz [not null]
  quizId String [not null]
}

Table Response {
  student_response String[] [not null]
  user User [not null]
  userId String [not null]
  quiz Quiz [not null]
  quizId String [not null]
  result Result

  indexes {
    (userId, quizId) [pk]
  }
}

Table Result {
  id String [pk, unique]
  marks Int [not null]
  quiz Quiz [not null]
  quizId String [not null]
  response Response [not null]
  user User [not null]
  userId String [not null]

  indexes {
    (userId, quizId) [unique]
  }
}

Enum Category_name {
  ACHIEVEMENT
  IQ
  PERSONALITY
  PSYCHOLOGICAL
}

Enum Role {
  STUDENT
  TEACHER
}

Ref: Group_membership.userId > User.id [delete: Cascade]

Ref: Group_membership.groupId > Group.id [delete: Cascade]

Ref: Quiz.groupId > Group.id [delete: Cascade]

Ref: Question.quizId > Quiz.id [delete: Cascade]

Ref: Option.questionId > Question.id [delete: Cascade]

Ref: Answer.questionId - Question.id [delete: Cascade]

Ref: Answer.quizId > Quiz.id [delete: Cascade]

Ref: Response.userId > User.id [delete: Cascade]

Ref: Response.quizId > Quiz.id [delete: Cascade]

Ref: Result.quizId > Quiz.id [delete: Cascade]

Ref: Result.(userId, quizId) - Response.(userId, quizId) [delete: Cascade]

Ref: Result.userId > User.id [delete: Cascade]